# hf-paper-lens

./: .gitignore  Cargo.toml  README.md
implementations/: README.md
implementations/bld/: README.md  bld.py  train_bld.py
implementations/switch_kd/: README.md  switch_kd.py  train_switch_kd.py
src/: codify.rs  fetch.rs  main.rs  model.rs  prompt.rs  publish.rs  validate.rs
