[package]
name = "hf-paper-lens"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI that harvests Hugging Face Daily Papers, turns each paper into an AI-ready prompt, codifies the results, validates them, and publishes them to GitHub."
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1"
regex = "1"
futures = "0.3"
once_cell = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
